--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Algo Entry From AI That Works in Different Futures Markets | MUST Have For Your Strategy Building</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Try not to Cringe: MILLENNIALS</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The Real Purpose Behind Every Spiritual Retreat</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Shifting the Downward Pull to Upward</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -268,7 +268,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -576,7 +576,7 @@
                     <div class="video-info">
                         <h3>If You're Seeking Truth... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2514,7 +2514,7 @@
                     <div class="video-info">
                         <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 20, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Algo Entry From AI That Works in Different Futures Markets | MUST Have For Your Strategy Building</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5778,7 +5778,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -6627,7 +6627,7 @@
                         <div class="video-info">
                             <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 20, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>The Real Purpose Behind Every Spiritual Retreat</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Shifting the Downward Pull to Upward</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8085,7 +8085,7 @@
                         <div class="video-info">
                             <h3>If You're Seeking Truth... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Try not to Cringe: MILLENNIALS</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
