--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">23 minutes ago</div>
+                        <div class="date">42 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Sadhguru goes on a casual evening stroll on the streets of New York and New Yorkers can't keep calm!</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Success: My 5-Year Strategy Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1520,9 +1520,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=yMziuiG_oJ8" target="_blank">
-                    <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="Cheaters who make your blood boil..">
+                    <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="These cheaters will make your blood boil">
                     <div class="video-info">
-                        <h3>Cheaters who make your blood boil..</h3>
+                        <h3>These cheaters will make your blood boil</h3>
                         <div class="channel">Arthur Frederick</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Success: My 5-Year Strategy Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Sadhguru goes on a casual evening stroll on the streets of New York and New Yorkers can't keep calm!</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>BIGGER.. BIGGER.. The Beast Pizza is here!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Goes To His First Rave🕺🏻😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">23 minutes ago</div>
+                            <div class="date">42 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10646,9 +10646,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=yMziuiG_oJ8" target="_blank">
-                        <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="Cheaters who make your blood boil..">
+                        <img src="https://i.ytimg.com/vi/yMziuiG_oJ8/mqdefault.jpg" alt="These cheaters will make your blood boil">
                         <div class="video-info">
-                            <h3>Cheaters who make your blood boil..</h3>
+                            <h3>These cheaters will make your blood boil</h3>
                             <div class="channel">Arthur Frederick</div>
                             <div class="date">1 week ago</div>
                         </div>
